fix dark mode text unreadable

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -42,3 +42,6 @@
 .blocklyFlyoutScrollbar[display='none'] {
 	display: none;
 }
+.blocklyHtmlInput {
+	color: black;
+}
